# PyDeath

./: CMakeLists.txt  LICENSE  README.md  about.md  mod.json
presets/: default.py  playerpos.py
src/: main.cpp  pybindings.cpp
